# Neuron-atlas-analysis

./: README.md  Supplementary Table 1. Summary of statical analysis.xlsx
Abeta_analysis/: 1-2_Abeta_extraction.ipynb  2_Abeta_data_registration_to_Neuron_Atlas.ipynb
param/Neuronomics/#4_APPmodel_Ctr1m_1_2022_1104_1550/: param_HDoG_FW.json  param_HDoG_RV.json  param_classify.json  param_mapping_R.json  param_merge.json  param_multichannel-rank.json  param_stitching.json
script/: 1-1-10_Neuron_50um_image_making.ipynb  1-1-11_Registration_to_the_raw_Neuron_Atlas_using_Neuron_density_image.ipynb  1-1-6_Stitched_50um_image_making.ipynb  1-1-9_pdfCluster.ipynb  10_Microglial_spatial_gradient_making.ipynb  2_SCA_registration_and_annotation.ipynb  3_local_cell_density_consistency.ipynb  4_Whole_brain_regional_plots.ipynb  7-1_Aβ_Pathological_pseudotime_analysis.ipynb  7-3_microgliosis(NND)_Pathological_pseudotime_analysis.ipynb  8_3D_vs_2D_analysis.ipynb  9_Microglial_3D_morphology_and_microgliosis_analysis.ipynb  AtlasMapping_stitched_initial_annotation_all.py  HDoG_classifier_NeuN.py  MergeBrain_NeuN.py  MultiChannelVerification-rank-simple-dsb.py  R_code_average_age.R  R_code_glmnb.R  R_code_glmnb_age.R  R_code_lire_age.R  R_code_lire_age_using_int_input_data.R  R_code_time_course_average_age.R
script/stitching_2023/: 1-1-5_Robust_stitching.ipynb
script/stitching_2023/modules/: stitching_class_220823.py  stitching_xy_2060.py  utils_220828.py
src/3D/: CCL3D.cu  CMakeLists.txt  DoG3DFilter.cu  DoG3DFilter.cuh  Eigenvalues.cu  Erosion3DFilter.cu  HDoG3D_NeuN_ver3_Rank_simple_3_color.cpp  Hessian3DFilter_element.cu  NormalizeFilter.cu  NormalizeFilter.cuh  NormalizeFilter_rank.cu  NormalizeFilter_rank.cuh  RegionalFeatures.cu  RegionalFeatures.cuh  utils_NeuN_ver3.h
